--- a/style.css
+++ b/style.css
@@ -1,33 +1,43 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
-
-
-
-
-
-
-
-
-
-
-
 /*---Media Queries --*/
-@media (max-width: 992px) {
 
+@media (min-width: 993px) {
+  .intro-text {
+    font-size: 60px;
   }
-@media (max-width: 768px) {
-  
-}
-@media (max-width: 576px) {
-  
-}
-@media only screen and (max-width: 400px) {
-.logo-text {
-  font-size:x-large;
-}
+
 }
 
+@media (max-width: 992px) {
+  .intro-text {
+    font-size: 60px;
+  }
+
+}
+
+@media (max-width: 768px) {
+  .intro-text {
+    font-size: 50px;
+  }
+
+}
+
+@media (max-width: 576px) {
+  .intro-text {
+    font-size: 50px;
+  }
+
+}
+
+@media (max-width: 400px) {
+  .intro-text {
+    font-size: 50px;
+  }
+
+}
 
 /*---Firefox Bug Fix --*/
+
 .carousel-item {
   transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease;
@@ -35,13 +45,16 @@
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
 }
+
 /*--- Fixed Background Image --*/
+
 figure {
   position: relative;
   width: 100%;
   height: 60%;
   margin: 0!important;
 }
+
 .fixed-wrap {
   clip: rect(0, auto, auto, 0);
   position: absolute;
@@ -50,6 +63,7 @@ figure {
   width: 100%;
   height: 100%;
 }
+
 #fixed {
   background-image: url('img/mac.png');
   position: fixed;
@@ -61,17 +75,23 @@ figure {
   background-size: cover;
   background-position: center center;
   -webkit-transform: translateZ(0);
-          transform: translateZ(0);
+  transform: translateZ(0);
   will-change: transform;
 }
+
 /*--- Bootstrap Padding Fix --*/
+
 [class*="col-"] {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 /*--- Page Styles --*/
+.logo-text-container {
+  font-size: 24px;
+  
+}
 .logo-text {
-  font-size:xx-large;
+
 }
 
 
@@ -91,11 +111,3 @@ Large (lg) devices (desktops, 992px and up)
 Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
 */
-
-
-
-
-
-
-
-
