fixed background image

--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@
 }
 /*--- Page Styles --*/
 body {
-  background-image: url("");
-  background-color: lightgreen;
+  background-image: url("img/3750wide_.jpg");
+  background-color: lightgray;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center; 
