--- a/style.css
+++ b/style.css
@@ -142,6 +142,16 @@ body {
   text-align: left;
   max-width: 850px;
 }
+#contact-section{
+  margin: 20px 0px 10px 0px;
+  text-align: center;
+  background-color: white;
+}
+.contact-form{
+  width:50%;
+  max-width:600px;
+  margin: 0 auto;
+}
 
 #footer {
   color: lightgray;
