--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,7 +58,7 @@
 /*--- Page Styles --*/
 
 body {
-  background-image: url("img/3750wide_.jpg");
+  background-image: url("/img/3750wide_.jpg");
   background-color: lightgray;
   background-repeat: no-repeat;
   background-attachment: fixed;
