--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,10 +46,13 @@
 				<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
 				</div>
 				<a role="button" class="btn btn-inverse btn-dark" href="#contact">Contact Me</a>
+				
 			</div>
-			<br>
-
+			<br><br>
+			<% include ./partials/messages %>
+			
 		</div>
+		
 	</div>
 
 	<!--- projects section -->
@@ -162,15 +165,15 @@
 			<form method="POST" action="/send">
 				<div class="form-group">
 					<label for="name">Name</label>
-					<input type="text" class="form-control" id="name" placeholder="e.g. Jane Smith">
+					<input type="text" class="form-control" id="name" name="name" placeholder="e.g. Jane Smith">
 				</div>
 				<div class="form-group">
 					<label for="email-address">Email address</label>
-					<input type="email" class="form-control" id="email-address" placeholder="e.g. Jane@global.com">
+					<input type="email" class="form-control" id="email-address" name="email" placeholder="e.g. Jane@global.com">
 				</div>
 				<div class="form-group">
 					<label for="phone-number">Phone Number</label>
-					<input type="text" class="form-control" id="phone" placeholder="e.g. 555-123-4567">
+					<input type="text" class="form-control" id="phone" name="phone" placeholder="e.g. 555-123-4567">
 				</div>
 				<div class="form-group">
 					<label for="message">Message</label>
@@ -179,6 +182,7 @@
 				</div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>
+			
 		</div>
 		<br>
 		<br>
