--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -1,8 +1,10 @@
 <% if(msg != '') { %>
+  <div style="width: 80%; text-align: center; margin: 0 auto;">
     <div class="alert alert-success alert-dismissible fade show" role="alert">
       <%= msg %>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-    <% } %>
+  </div>
+<% } %>
