fixed a typo and working on background style on different screen sizes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,10 +39,10 @@
 
 	<!-- Intro -->
 	<div class="d-flex justify-content-center intro-container">
-		<div class="align-self-center align-items-sm-stretch justify-content-center">
+		<div class="align-self-center align-items-sm-stretch justify-content-center intro-hero" >
 			<h1 class="text-center intro-text">Dan Hansen</h1>
-			<p class="lead text-center" style="color: whitesmoke">I build software products for large enterprises and
-				small organizations.</p>
+			<p class="lead text-center " ><strong>I build software products for large enterprises and
+				small organizations.</strong></p>
 			<div class="d-flex align-self-center justify-content-center">
 				<a role="button" class="btn btn-inverse btn-dark" href="#project-section">View Work</a>
 				<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
