--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,9 @@
 /*---Media Queries --*/
 
 @media (min-width: 993px) {
+  body {
+    background-size: auto, 120vh;
+  }
   .intro-text {
     font-size: 60px;
   }
@@ -19,6 +22,9 @@
 }
 
 @media (max-width: 992px) {
+  body {
+    background-size: auto, 120vh;
+  }
   .intro-text {
     font-size: 60px;
   }
@@ -44,6 +50,9 @@
 }
 
 @media (max-width: 576px) {
+  body {
+    background-size: auto 120vh;
+  }
   .intro-text {
     font-size: 60px;
   }
@@ -63,13 +72,21 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  background-size: auto 120vh;
 }
 
 .intro-container {
   height: 110vh;
   margin-top: -10vh;
-  background-color: #959595
+  
+}
+
+.intro-hero {
+  background: rgb(255, 255, 255, .75);
+  padding: 15px; 
+}
+
+.intro-text {
+  opacity: 1.0;
 }
 
 .logo-text-container {
