got background style worked out. works on widths from 320px to 4000px

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,10 +25,10 @@
 						<a class="nav-link" href="#project-section">Projects</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">About</a>
+						<a class="nav-link" href="#about-section">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contact</a>
+						<a class="nav-link" href="#contact-section">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -39,16 +39,29 @@
 
 	<!-- Intro -->
 	<div class="d-flex justify-content-center intro-container">
-		<div class="align-self-center align-items-sm-stretch justify-content-center intro-hero" >
+		<div class="align-self-center align-items-sm-stretch justify-content-center intro-hero">
 			<h1 class="text-center intro-text">Dan Hansen</h1>
-			<p class="lead text-center " ><strong>I build software products for large enterprises and
-				small organizations.</strong></p>
+			<p class="lead text-center "><strong>I build software products for large enterprises and
+					small organizations.</strong></p>
 			<div class="d-flex align-self-center justify-content-center">
+
 				<a role="button" class="btn btn-inverse btn-dark" href="#project-section">View Work</a>
 				<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
 				</div>
-				<a role="button" class="btn btn-inverse btn-dark" href="#contact">Contact Me</a>
+				<a role="button" class="btn btn-inverse btn-dark" href="#contact-section">Contact Me</a>
 			</div>
+			<hr class="project-dividers">
+			<div class="d-flex align-self-center justify-content-center">
+				<p>Find me online:&nbsp;&nbsp;</p>
+				<a href=""><i class="fab fa-linkedin" style="color:#343a40; font-size:x-large;"></i></a>
+				<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
+				</div>
+				<a href="https://www.github.com/dhnsen"><i class="fab fa-github" style="color:#343a40; font-size:x-large;"></i></a>
+				<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
+				</div>
+				<a href="https://medium.com/@spag1024"><i class="fab fa-medium-m" style="color:#343a40; font-size:x-large;"></i></a>
+			</div>
+
 		</div>
 
 	</div>
@@ -197,13 +210,13 @@
 		<br>
 		<br>
 		<div class="logo-text-container d-flex align-self-center justify-content-center">
-			<i class="fab fa-linkedin"></i>
+			<a href=""><i class="fab fa-linkedin" style="color: lightgray;"></i></a>
 			<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
 			</div>
-			<i class="fab fa-github"></i>
+			<a href=""><i class="fab fa-github" style="color: lightgray;"></i></a>
 			<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
 			</div>
-			<!-- <a href="https://medium.com/@spag1024"></a> --> <i class="fab fa-medium-m"></i>
+			<a href="https://medium.com/@spag1024"><i class="fab fa-medium-m" style="color: lightgray;"></i></a>
 		</div>
 		<br>
 		<br>
