--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
 
 @media (min-width: 993px) {
   body {
-    background-size: auto, 120vh;
+    background-size: cover;
   }
   .intro-text {
     font-size: 60px;
@@ -23,7 +23,7 @@
 
 @media (max-width: 992px) {
   body {
-    background-size: auto, 120vh;
+    background-size: auto 120vh;
   }
   .intro-text {
     font-size: 60px;
@@ -76,17 +76,13 @@ body {
 
 .intro-container {
   height: 110vh;
-  margin-top: -10vh;
+  margin-top: -15vh;
   
 }
 
 .intro-hero {
-  background: rgb(255, 255, 255, .75);
-  padding: 15px; 
-}
-
-.intro-text {
-  opacity: 1.0;
+  background: rgb(255, 255, 255, .90);
+  padding: 25px; 
 }
 
 .logo-text-container {
@@ -99,7 +95,7 @@ body {
 }
 
 #project-section {
-  margin: 20px 0px 10px 0px;
+  margin: 20px 0px 20px 0px;
   text-align: center;
   background-color: white;
 }
@@ -148,7 +144,7 @@ body {
 }
 
 #about-section {
-  margin: 20px 0px 10px 0px;
+  margin: 20px 0px 20px 0px;
   text-align: center;
   background-color: white;
 }
