working on content

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,23 +122,17 @@
 		<!--- project -->
 		<div class="project-container">
 			<div class="project-title">
-				<h4>Project title</h4>
+				<h4>Savings Goal Planner<br>This one is not completed yet</h4>
 			</div>
 			<div class="project-image-container">
-				<img class="project-image" src="img/spending-app.jpg">
+				<p style="margin: auto, 50%">No screenshot available</p>
 			</div>
 			<div class="project-info-container">
-				<h4 class="title-in-project-description">Project title</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-					aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-					culpa qui officia deserunt mollit anim id est laborum.</p>
-				<div class="project-tech">
-					<p>ASP.NET MVC | SQL Server | Bootstrap | JQuery</p>
-				</div>
+				<h4 class="title-in-project-description">Savings Goal Planner<br>This one is not completed yet</h4>
+				<p>This software allows a user to create savings goals. Then they enter the total amount saved and it breaks down their progress over all goals.</p>
+				<p>It's architected with a .NET Core API back-end and an ExpressJS/EJS front-end. This is an experiment in the efficiency of microservices.</p>
 				<div class="project-links">
-					<p><strong><a href="">View it live</a> || <a href="">See it on Github</a></strong></p>
+					<p><strong><a href="">See it on Github</a></strong></p>
 				</div>
 			</div>
 		</div>
