worked on footer content

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -200,18 +200,13 @@
 		<br>
 	</section>
 	<!--- Footer -->
-	<div class="d-flex bg-dark justify-content-center" id="footer">
+	<div id="footer">
+		<p></p>
 		<br>
 		<br>
-		<div class="logo-text-container d-flex align-self-center justify-content-center">
-			<a href=""><i class="fab fa-linkedin" style="color: lightgray;"></i></a>
-			<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
-			</div>
-			<a href=""><i class="fab fa-github" style="color: lightgray;"></i></a>
-			<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
-			</div>
-			<a href="https://medium.com/@spag1024"><i class="fab fa-medium-m" style="color: lightgray;"></i></a>
-		</div>
+		<h5>This page runs on:</h5>
+		<h5>Ubuntu | NGINX | NodeJS | ExpressJS | EJS | HTML5 | CSS</h5>
+		<p>Copyright <%= new Date().getFullYear() %> Dan Hansen</p>
 		<br>
 		<br>
 	</div>
