--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
 			<hr class="project-dividers">
 			<div class="d-flex align-self-center justify-content-center">
 				<p>Find me online:&nbsp;&nbsp;</p>
-				<a href=""><i class="fab fa-linkedin" style="color:#343a40; font-size:x-large;"></i></a>
+				<a href="https://www.linkedin.com/in/hansendanield/"><i class="fab fa-linkedin" style="color:#343a40; font-size:x-large;"></i></a>
 				<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
 				</div>
 				<a href="https://www.github.com/dhnsen"><i class="fab fa-github" style="color:#343a40; font-size:x-large;"></i></a>
@@ -132,7 +132,7 @@
 				<p>This software allows a user to create savings goals. Then they enter the total amount saved and it breaks down their progress over all goals.</p>
 				<p>It's architected with a .NET Core API back-end and an ExpressJS/EJS front-end. This is an experiment in the efficiency of microservices.</p>
 				<div class="project-links">
-					<p><strong><a href="">See it on Github</a></strong></p>
+					<p><strong><a href="https://github.com/dhnsen/FinGoals-DotNet">See it on Github</a></strong></p>
 				</div>
 			</div>
 		</div>
