--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,7 +91,7 @@
 						<p>ASP.NET MVC | SQL Server | Bootstrap | JQuery</p>
 					</div>
 					<div class="project-links">
-						<p><strong><a href="">View it live</a> || <a href="">Review on Github</a></strong></p>
+						<p><strong><a href="http://spendingcomparison.us">View it live</a> || <a href="https://github.com/dhnsen/SpendingComparison">Review on Github</a></strong></p>
 					</div>
 				</div>
 			</div>
