--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,8 +85,7 @@
 					<p>This app prompts users to enter their income, region and amounts of spending for different
 						categories. Then it compares them to similar households using data from the Bureau of Labor
 						Statistics. This project got a few hundred hits after I posted a link on Reddit. Feedback was
-						that
-						results need to be graphical, rather than textual. Otherwise, it was well received.</p>
+						that results need to be graphical, rather than textual. Otherwise, it was well received.</p>
 					<div class="project-tech">
 						<p>ASP.NET MVC | SQL Server | Bootstrap | JQuery</p>
 					</div>
