--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#"> Brand/Logo here</a>
+			<a class="navbar-brand" href="#">Dan Hansen - Software Developer</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
