edited background style and updated some content

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Dan Hansen - Software Developer</a>
+			<a class="navbar-brand" href="#">Dan Hansen</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -70,6 +70,7 @@
 	<section id="project-section">
 		<br><br>
 		<h1>Projects</h1>
+		<br>
 		<!--- project -->
 		<div class="project-container">
 			<div class="project-title">
@@ -137,7 +138,7 @@
 		</div>
 		<br>
 	</section>
-
+<br>
 	<!--- About -->
 	<section id="about-section">
 		<br>
@@ -160,12 +161,13 @@
 				<li>I LOVE to create tools to help other people get their work done faster.</li>
 				<li>I am willing to take on the hard projects.</li>
 			</ul>
+			<p><strong>What can I do?</strong> I can develop the WHOLE stack. I can run servers, administrate databases, build back-end or front-end and I can explain it to the customer in language they understand.</p>
 			<br>
 			<br>
 
 		</div>
 	</section>
-
+<br>
 	<!-- Contact section -->
 	<section id="contact-section">
 		<br>
@@ -198,6 +200,8 @@
 		<br>
 		<br>
 	</section>
+
+	<br>
 	<!--- Footer -->
 	<div id="footer">
 		<p></p>
