--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 /*---Media Queries --*/
 
 @media (min-width: 993px) {
@@ -77,11 +76,11 @@ body {
 .intro-container {
   height: 110vh;
   margin-top: -15vh;
-  
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .intro-hero {
-  background: rgb(255, 255, 255, .90);
+  background: rgb(255, 255, 255);
   padding: 25px; 
 }
 
@@ -95,7 +94,7 @@ body {
 }
 
 #project-section {
-  margin: 20px 0px 20px 0px;
+  margin: 0px 0px 20px 0px;
   text-align: center;
   background-color: white;
 }
