--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
 			</div>
 
 		</div>
-
+		<div id="intro-arrow"><i class="fas fa-caret-down"></i></div>
 	</div>
 
 	<!--- projects section -->
@@ -166,6 +166,7 @@
 			<br>
 
 		</div>
+		
 	</section>
 <br>
 	<!-- Contact section -->
