--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
 			</div>
 
 		</div>
-		<div id="intro-arrow"><i class="fas fa-caret-down"></i></div>
+		<div id="intro-arrow"><a href="#project-section"><i class="fas fa-caret-down"></i></a></div>
 	</div>
 
 	<!--- projects section -->
