--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,8 +37,8 @@
 	<!-- Messages -->
 	<% include ./partials/messages %>
 
-	<!-- Intro -->
-	<div class="d-flex justify-content-center intro-container">
+	<!-- Intro-section -->
+	<section class="d-flex justify-content-center intro-container">
 		<div class="align-self-center align-items-sm-stretch justify-content-center intro-hero">
 			<h1 class="text-center intro-text">Dan Hansen</h1>
 			<p class="lead text-center "><strong>I build software products for large enterprises and
@@ -63,8 +63,8 @@
 			</div>
 
 		</div>
-		<div id="intro-arrow"><a href="#project-section"><i class="fas fa-caret-down"></i></a></div>
-	</div>
+		<div class="circle-base" id="intro-arrow"><a href="#project-section"><i class="fas fa-caret-down"></i></a></div>
+	</section>
 
 	<!--- projects section -->
 	<section id="project-section">
