--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-		<div class="container-fluid">
+		<div class="container-fluid" style="height:15%; overflow: visible;">
 			<a class="navbar-brand" href="#">Dan Hansen</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
