--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Dan Hansen - Software Developer</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
 	<link href="css/style.css" rel="stylesheet">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136395482-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-136395482-2');
+</script>
+
 </head>
 
 <body>
