--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 		<div class="container-fluid" style="height:15%; overflow: visible;">
-			<a class="navbar-brand" href="#"><img src="public\img\66640665_443523659823753_5215094366208524288_n.png" style="height: 65px; width: 65px;">Dan Hansen</a>
+			<a class="navbar-brand" href="#"><img src="public\img\66640665_443523659823753_5215094366208524288_n.png" id="brand-image">Dan Hansen</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
