--- a/views/index.ejs
+++ b/views/index.ejs
@@ -138,7 +138,7 @@
 				<h4>Savings Goal Planner<br>This one is not completed yet</h4>
 			</div>
 			<div class="project-image-container">
-				<p style="margin: auto, 50%">No screenshot available</p>
+				<img class="project-image" src="public/img/goals-app.jpg">
 			</div>
 			<div class="project-info-container">
 				<h4 class="title-in-project-description">Savings Goal Planner<br>This one is not completed yet</h4>
