changed a project link and re-arranged

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,6 +112,24 @@
 		<!--- project -->
 		<div class="project-container">
 			<div class="project-title">
+				<h4>Savings Goal Planner</h4>
+			</div>
+			<div class="project-image-container">
+				<img class="project-image" src="public/img/goals-app.jpg">
+			</div>
+			<div class="project-info-container">
+				<h4 class="title-in-project-description">Savings Goal Planner<br>This one is not completed yet</h4>
+				<p>This software allows a user to create savings goals. Then they enter the total amount saved and it breaks down their progress over all goals.</p>
+				<p>It's architected with a .NET Core API back-end and an ExpressJS/EJS front-end. This is an experiment in the efficiency of microservices.</p>
+				<div class="project-links">
+					<p><strong><a href="https://github.com/dhnsen/FinGoals">Review on Github</a></strong></p>
+				</div>
+			</div>
+		</div>
+		<br>
+		<!--- project -->
+		<div class="project-container">
+			<div class="project-title">
 				<h4>Foundation Web Site</h4>
 			</div>
 			<div class="project-image-container">
@@ -132,24 +150,7 @@
 		</div>
 		<hr class="project-dividers">
 		<br>
-		<!--- project -->
-		<div class="project-container">
-			<div class="project-title">
-				<h4>Savings Goal Planner<br>This one is not completed yet</h4>
-			</div>
-			<div class="project-image-container">
-				<img class="project-image" src="public/img/goals-app.jpg">
-			</div>
-			<div class="project-info-container">
-				<h4 class="title-in-project-description">Savings Goal Planner<br>This one is not completed yet</h4>
-				<p>This software allows a user to create savings goals. Then they enter the total amount saved and it breaks down their progress over all goals.</p>
-				<p>It's architected with a .NET Core API back-end and an ExpressJS/EJS front-end. This is an experiment in the efficiency of microservices.</p>
-				<div class="project-links">
-					<p><strong><a href="https://github.com/dhnsen/FinGoals-DotNet">See it on Github</a></strong></p>
-				</div>
-			</div>
-		</div>
-		<br>
+		
 	</section>
 <br>
 	<!--- About -->
