--- a/views/index.ejs
+++ b/views/index.ejs
@@ -118,14 +118,18 @@
 				<img class="project-image" src="public/img/goals-app.jpg">
 			</div>
 			<div class="project-info-container">
-				<h4 class="title-in-project-description">Savings Goal Planner<br>This one is not completed yet</h4>
+				<h4 class="title-in-project-description">Savings Goal Planner</h4>
 				<p>This software allows a user to create savings goals. Then they enter the total amount saved and it breaks down their progress over all goals.</p>
-				<p>It's architected with a .NET Core API back-end and an ExpressJS/EJS front-end. This is an experiment in the efficiency of microservices.</p>
+				<p>It's architected with .NET Core MVC and WebAPI. It makes use of XMLHttpRequest for API calls rather than JQuery.</p>
+				<div class="project-tech">
+					<p>ASP.NET Core MVC | SQL Server | Bootstrap | JQuery</p>
+				</div>
 				<div class="project-links">
 					<p><strong><a href="https://github.com/dhnsen/FinGoals">Review on Github</a></strong></p>
 				</div>
 			</div>
 		</div>
+		<hr class="project-dividers">
 		<br>
 		<!--- project -->
 		<div class="project-container">
@@ -148,7 +152,6 @@
 				</div>
 			</div>
 		</div>
-		<hr class="project-dividers">
 		<br>
 		
 	</section>
