--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,7 +99,7 @@
 						Statistics. This project got a few hundred hits after I posted a link on Reddit. Feedback was
 						that results need to be graphical, rather than textual. Otherwise, it was well received.</p>
 					<div class="project-tech">
-						<p>ASP.NET MVC | SQL Server | Bootstrap | JQuery</p>
+						<p>ASP.NET MVC 5 | SQL Server | Bootstrap | JQuery</p>
 					</div>
 					<div class="project-links">
 						<p><strong><a href="http://spendingcomparison.us">View it live</a> || <a href="https://github.com/dhnsen/SpendingComparison">Review on Github</a></strong></p>
